# mcp-superset

./: CHANGELOG.md  pyproject.toml
src/mcp_superset/: __init__.py  auth.py  client.py
src/mcp_superset/tools/: audit.py  charts.py  dashboards.py  databases.py  datasets.py  groups.py  helpers.py  queries.py  security.py  system.py  tags.py
