[project]
name = "mcp-superset"
version = "0.2.6"
description = "MCP server for managing Apache Superset — dashboards, charts, datasets, SQL Lab, access control, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Stanislav Chernov", email = "bintocher@gmail.com" },
]
keywords = [
    "mcp",
    "superset",
    "apache-superset",
    "model-context-protocol",
    "dashboards",
    "analytics",
    "bi",
    "llm",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/bintocher/mcp-superset"
Repository = "https://github.com/bintocher/mcp-superset"
Issues = "https://github.com/bintocher/mcp-superset/issues"
Changelog = "https://github.com/bintocher/mcp-superset/blob/main/CHANGELOG.md"

[project.scripts]
mcp-superset = "mcp_superset.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_superset"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
